--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RREQKJNSX6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RREQKJNSX6');
+</script>
+
 <meta charset="utf-8">
 <title>Redirecting to https://artclubhkusu.github.io/dist/</title>
 <meta http-equiv="refresh" content="0; URL=https://artclubhkusu.github.io/dist/">
